--- a/traefik-config/dynamic/options/CipherSuites.yml
+++ b/traefik-config/dynamic/options/CipherSuites.yml
@@ -1,29 +1,29 @@
-#################################
+################################################################################
 # Mozilla Security/Server Side TLS Recommendation
 # https://wiki.mozilla.org/Security/Server_Side_TLS
-#--------------------------------
+#-------------------------------------------------------------------------------
 # How to use tls options on a router.
 # Lables:
-#traefik.routers.foo.tls.options=modern
-#--------------------------------
+#   traefik.routers.foo.tls.options=modern
 # YML:
-#http:
-#  routers;
-#    foo:
-#      tls:
-#        options: modern
+#   http:
+#     routers;
+#       foo:
+#         tls:
+#           options: modern
 
 tls:
 
   options:
 
-    #################################
+    ############################################################################
     # Modern Compatibility | Modern only
-    # -------------------------------
+    # --------------------------------------------------------------------------
     # TLS 1.3
-    # -------------------------------
-    # For services with clients that support TLS 1.3 and don't need backward compatibility,
-    # the modern configuration provides an extremely high level of security.
+    # --------------------------------------------------------------------------
+    # For services with clients that support TLS 1.3 and don't need backward
+    # compatibility, the modern configuration provides an extremely high-level
+    # of security.
     modern:
       minVersion: VersionTLS13
       sniStrict: true
@@ -36,14 +36,16 @@ tls:
         - prime256v1
         - secp384r1
 
-    #################################
+    ############################################################################
     # Modern Compatibility | Recommended
-    # -------------------------------
+    # --------------------------------------------------------------------------
     # TLS 1.3 | TLS 1.2
-    # -------------------------------
-    # For services that don't need compatibility with legacy clients such as Windows XP or old versions of OpenSSL.
-    # This is the recommended configuration for the vast majority of services,
-    # as it is highly secure and compatible with nearly every client released in the last five (or more) years.
+    # --------------------------------------------------------------------------
+    # For services that don't need compatibility with legacy clients such as
+    # Windows XP or old versions of OpenSSL. This is the recommended
+    # configuration for the vast majority of services, as it is highly secure
+    # and compatible with nearly every client released in the last
+    # five (or more) years.
     default:
       minVersion: VersionTLS12
       sniStrict: true
@@ -67,11 +69,11 @@ tls:
         - prime256v1
         - secp384r1
 
-    #################################
+    ############################################################################
     # Legacy Compatibility | Not recommended
-    # -------------------------------
+    # --------------------------------------------------------------------------
     # TLS 1.3 | TLS 1.2 | TLS 1.1 | TLS 1.0
-    # -------------------------------
+    # --------------------------------------------------------------------------
     # This configuration is compatible with a number of very old clients,
     # and should be used only as a last resort.
     legacy:
