--- a/traefik-config/dynamic/options/CipherSuites.yml
+++ b/traefik-config/dynamic/options/CipherSuites.yml
@@ -1,29 +1,33 @@
 ################################################################################
+#
 # Mozilla Security/Server Side TLS Recommendation
 # https://wiki.mozilla.org/Security/Server_Side_TLS
-#-------------------------------------------------------------------------------
-# How to use tls options on a router.
-# Lables:
-#   traefik.routers.foo.tls.options=modern
-# YML:
-#   http:
-#     routers;
-#       foo:
-#         tls:
-#           options: modern
+#
+# ------------------------------------------------------------------------------
+#
+# Combined with supported ciphers in GO TLS
+# https://pkg.go.dev/crypto/tls?utm_source=godoc#pkg-constants
+#
+################################################################################
 
 tls:
 
   options:
 
     ############################################################################
+    #
     # Modern Compatibility | Modern only
+    #
     # --------------------------------------------------------------------------
+    #
     # TLS 1.3
+    #
     # --------------------------------------------------------------------------
+    #
     # For services with clients that support TLS 1.3 and don't need backward
     # compatibility, the modern configuration provides an extremely high-level
     # of security.
+    #
     modern:
       minVersion: VersionTLS13
       sniStrict: true
@@ -37,15 +41,21 @@ tls:
         - secp384r1
 
     ############################################################################
+    #
     # Modern Compatibility | Recommended
+    #
     # --------------------------------------------------------------------------
+    #
     # TLS 1.3 | TLS 1.2
+    #
     # --------------------------------------------------------------------------
+    #
     # For services that don't need compatibility with legacy clients such as
     # Windows XP or old versions of OpenSSL. This is the recommended
     # configuration for the vast majority of services, as it is highly secure
     # and compatible with nearly every client released in the last
     # five (or more) years.
+    #
     default:
       minVersion: VersionTLS12
       sniStrict: true
@@ -55,60 +65,64 @@ tls:
         - TLS_AES_256_GCM_SHA384
         - TLS_CHACHA20_POLY1305_SHA256
         # TLS 1.2
-        - ECDHE-ECDSA-AES128-GCM-SHA256
-        - ECDHE-RSA-AES128-GCM-SHA256
-        - ECDHE-ECDSA-AES256-GCM-SHA384
-        - ECDHE-RSA-AES256-GCM-SHA384
-        - ECDHE-ECDSA-CHACHA20-POLY1305
-        - ECDHE-RSA-CHACHA20-POLY1305
-        - DHE-RSA-AES128-GCM-SHA256
-        - DHE-RSA-AES256-GCM-SHA384
-        - DHE-RSA-CHACHA20-POLY1305
+        - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256
+        - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305           # For compatibility
+        - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
+        - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305             # For compatibility
+        - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+        - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+        - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+        - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+        - TLS_RSA_WITH_AES_256_GCM_SHA384
+        - TLS_RSA_WITH_AES_128_GCM_SHA256
       curvePreferences:
         - X25519
         - prime256v1
         - secp384r1
 
     ############################################################################
-    # Legacy Compatibility | Not recommended
+    #
+    # Legacy Compatibility | Really not recommended
+    #
     # --------------------------------------------------------------------------
-    # TLS 1.3 | TLS 1.2 | TLS 1.1 | TLS 1.0
+    #
+    # TLS 1.3 | TLS 1.2 | TLS 1.1 | TLS 1.0 | No SSLv3 support
+    #
     # --------------------------------------------------------------------------
+    #
     # This configuration is compatible with a number of very old clients,
     # and should be used only as a last resort.
+    #
     legacy:
       cipherSuites:
         # TLS 1.3
         - TLS_AES_128_GCM_SHA256
         - TLS_AES_256_GCM_SHA384
         - TLS_CHACHA20_POLY1305_SHA256
-        # TLS 1.2
-        - ECDHE-ECDSA-AES128-GCM-SHA256
-        - ECDHE-RSA-AES128-GCM-SHA256
-        - ECDHE-ECDSA-AES256-GCM-SHA384
-        - ECDHE-RSA-AES256-GCM-SHA384
-        - ECDHE-ECDSA-CHACHA20-POLY1305
-        - ECDHE-RSA-CHACHA20-POLY1305
-        - DHE-RSA-AES128-GCM-SHA256
-        - DHE-RSA-AES256-GCM-SHA384
-        - DHE-RSA-CHACHA20-POLY1305
-        - ECDHE-ECDSA-AES128-SHA256
-        - ECDHE-RSA-AES128-SHA256
-        - ECDHE-ECDSA-AES128-SHA
-        - ECDHE-RSA-AES128-SHA
-        - ECDHE-ECDSA-AES256-SHA384
-        - ECDHE-RSA-AES256-SHA384
-        - ECDHE-ECDSA-AES256-SHA
-        - ECDHE-RSA-AES256-SHA
-        - DHE-RSA-AES128-SHA256
-        - DHE-RSA-AES256-SHA256
-        - AES128-GCM-SHA256
-        - AES256-GCM-SHA384
-        - AES128-SHA256
-        - AES256-SHA256
-        - AES128-SHA
-        - AES256-SHA
-        - DES-CBC3-SHA
+        # TLS 1.2 | TLS 1.1 | TLS 1.0
+        - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256
+        - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305           # For compatibility
+        - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
+        - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305             # For compatibility
+        - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+        - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+        - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+        - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+        - TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
+        - TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256
+        - TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA
+        - TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA
+        - TLS_ECDHE_RSA_WITH_3DES_EDE_CBC_SHA
+        - TLS_ECDHE_RSA_WITH_RC4_128_SHA
+        - TLS_ECDHE_ECDSA_WITH_AES_256_CBC_SHA
+        - TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA
+        - TLS_RSA_WITH_AES_256_GCM_SHA384
+        - TLS_RSA_WITH_AES_128_GCM_SHA256
+        - TLS_RSA_WITH_AES_128_CBC_SHA256
+        - TLS_RSA_WITH_AES_256_CBC_SHA
+        - TLS_RSA_WITH_AES_128_CBC_SHA
+        - TLS_RSA_WITH_3DES_EDE_CBC_SHA
+        - TLS_RSA_WITH_RC4_128_SHA
       curvePreferences:
         - X25519
         - prime256v1
