--- a/traefik-config/dynamic/options/CipherSuites.yml
+++ b/traefik-config/dynamic/options/CipherSuites.yml
@@ -36,9 +36,9 @@ tls:
         - TLS_AES_256_GCM_SHA384
         - TLS_CHACHA20_POLY1305_SHA256
       curvePreferences:
-        - X25519
-        - prime256v1
-        - secp384r1
+        - X25519    # X25519
+        - CurveP256 # prime256v1
+        - CurveP384 # secp384r1
 
     ############################################################################
     #
@@ -76,9 +76,9 @@ tls:
         - TLS_RSA_WITH_AES_256_GCM_SHA384
         - TLS_RSA_WITH_AES_128_GCM_SHA256
       curvePreferences:
-        - X25519
-        - prime256v1
-        - secp384r1
+        - X25519    # X25519
+        - CurveP256 # prime256v1
+        - CurveP384 # secp384r1
 
     ############################################################################
     #
@@ -124,6 +124,6 @@ tls:
         - TLS_RSA_WITH_3DES_EDE_CBC_SHA
         - TLS_RSA_WITH_RC4_128_SHA
       curvePreferences:
-        - X25519
-        - prime256v1
-        - secp384r1
+        - X25519    # X25519
+        - CurveP256 # prime256v1
+        - CurveP384 # secp384r1
